@@ -1,3 +1,8 @@
+2012-12-21  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/55763
+	* gfortran.dg/unlimited_polymorphic_4.f03: New test.
+
 2012-12-21  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/52996
